// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`namespaced-attribute.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<foo namespaced:attribte />;
<foo namespaced:attribte="1" />;
<foo namespaced:attribte={1} />;

=====================================output=====================================
<foo namespaced:attribte />;
<foo namespaced:attribte="1" />;
<foo namespaced:attribte={1} />;

================================================================================
`;

exports[`namespaced-name.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<jsx:namespacedname />;

<jsx:namespacedname>1</jsx:namespacedname>;

=====================================output=====================================
<jsx:namespacedname />;

<jsx:namespacedname>1</jsx:namespacedname>;

================================================================================
`;
